<resources>
    <string name="app_name">Proyecto_Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="singOut">Desconectar</string>
    <string name="mapa">Mapa</string>
    <string name="coordenades">geo:38.9863333,-0.5373188,17?q=Institut+d\'Educació+Secundària+Dr.+Lluís+Simarro</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>Ingles</item>
    </string-array>
    <string-array name="codigopais">
        <item>ESP</item>
        <item>FRA</item>
        <item>ALE</item>
    </string-array>
    <string name="preferencias">Preferencias</string>


    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha</string>
    <string name="selecionaFecha">Seleciona una fecha</string>
    <string name="nescritos">Numero de libros escritos</string>
    <string name="pais">Pais</string>
    <string name="biografia">Biografia</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>

    <string name="titulo">Titulo</string>
    <string name="saga">Saga</string>
    <string name="autor">Autor</string>
    <string name="subirportada">Subir portada</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="npag">Numero de paginas</string>
    <string name="editorial">Editorial</string>
    <string name="lengua">Lengua</string>
    <string name="genero">Genero</string>

    <string name="saga2">Saga: \u0020</string>
    <string name="autor2">Autor: \u0020</string>
    <string name="npag2">Nº pag: \u0020</string>
    <string name="valoracion">Valoracion: \u0020</string>

    <string name="leidos">Leidos</string>
    <string name="leyendo">Leyendo</string>
    <string name="deseados">Lista de deseos</string>
    <string name="todoslibros">Todos los libros"</string>


</resources>
