<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/leidos"
            android:title="@string/leidos" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/leyendo"
            android:title="@string/leyendo" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/listadeseos"
            android:title="@string/deseados" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@drawable/top"
            android:title="@string/todoslibros" />

    </group>


</menu>
